nav修改为中文

--- a/archive.html
+++ b/archive.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title : Archive
-header : Post Archive
+title : 文章
+header : 所有文章
 group: navigation
 ---
 {% include JB/setup %}
