--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Tags
-header: Posts By Tag
+title: 标签
+header: 根据标签快速导航到相应的文章
 group: navigation
 ---
 {% include JB/setup %}
