--- a/categories.html
+++ b/categories.html
@@ -10,13 +10,17 @@ group: navigation
   {% assign categories_list = site.categories %}
   {% include JB/categories_list %}
 </ul>
+<hr>
 
 
 {% for category in site.categories %} 
+<div class = "card">
   <h2 id="{{ category[0] }}-ref">{{ category[0] | join: "/" }}</h2>
   <ul>
     {% assign pages_list = category[1] %}  
     {% include JB/pages_list %}
   </ul>
+</div>
+<hr>
 {% endfor %}
 
