change "img"‘s directory

--- a/archive.html
+++ b/archive.html
@@ -7,4 +7,6 @@ group: navigation
 {% include JB/setup %}
 
 {% assign posts_collate = site.posts %}
+<div class = "card">
 {% include JB/posts_collate %}
+</div>
