--- a/archive.html
+++ b/archive.html
@@ -7,6 +7,6 @@ group: navigation
 {% include JB/setup %}
 
 {% assign posts_collate = site.posts %}
-<div class = "card">
+<div class="page card">
 {% include JB/posts_collate %}
 </div>
